# machine_lab3_mily

./: CMakeLists.txt  README.md  determ.cpp  main.cpp
